--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
   </head>
   <body>
     <h1 class="title">Tech</h1>
-    <h1 class="title">Tech</h1>
-    <h1 class="title">Tech</h1>
-    <h1 class="title">Tech</h1>
-    <h1 class="title">Tech</h1>
-    <h1 class="title">Tech</h1>
+    <p>Tech 2</p>
   </body>
 </html>
